--- a/notes.org
+++ b/notes.org
@@ -1,23 +1,32 @@
 #+EXPORT_FILE_NAME: README.md
 Добро пожаловать на страницу со сборником ресурсов по теме 
-"Английский язык и информационно-коммуникационные технологии"
+"Английский язык и информационно-коммуникационные технологии (ИКТ)"
 Цель этой страницы \mdash объединить наиболее важные и доступные сайты.
 
-# Существуют разные оценки количества языков в современном мире. 
-В современном мире  Среди них самым распространенным вторым
-языком является английский.
-Английский язык играет важную роль в современном мире. Сегодня по разным оценкам
-насчитывается от 2,5 до 5 тыс. [fn:belang] или более 7 тыс. 
-языков [fn:elogue-sum]. Английский среди них самый распространенный 
-[fn:elogue-eng]
+Английский язык играет важную роль в современном мире. [fn:1] Чаще всего он
+используется в качестве языка международного общения. Он 
+позволяет людям из разных концов мира понимать друг друга. Таким образом
+английский язык может способствовать решению задачи всеобщего взаимопонимания
+людей в глобальном мире.
 
+Весомый вклад в повышении статуса английского языка сделало распространение 
+информационных технологий. Этот язык стал де-факто стандартом создания и 
+описания явлений цифрового мира. Основой большинства наиболее
+популярных языков программирования является именно английский язык.
+
+# ITU отчет по-русски https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR2018-ES-PDF-R.pdf
+При этом сами ИКТ являются не менее существенной частью нашей жизни. По [[https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf][данным]] 
+на 2018 г. число абонентов мобильной связи приблизилось в мире приблизилось
+к населению земного шара. 
+
+# https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf
 # Он является языком 
 # международного общения. А следователь
 
 * Ссылки
 
 ** Словари
-- https://www.lexico.com/en. Старая [[[[https://en.oxforddictionaries.com/]]][ссылка]]
+- https://www.lexico.com/en. Старая [[https://en.oxforddictionaries.com/][ссылка]].
 - [[https://www.merriam-webster.com/]]
 - [[https://www.lingvolive.com/ru-ru]]
 
@@ -43,10 +52,8 @@ https://ru.aliexpress.com/
 http://cssgridgarden.com/
 *** Курс 2
 https://studio.code.org/s/course2
-* Ссылки
+* Сноски
 
-* Footnotes
-# [fn:belang] Арутюнова Н. Д. ЯЗЫК // Большая российская энциклопедия. Электронная версия (2017); https://bigenc.ru/linguistics/text/4924604 Дата обращения: 10.06.2019
-[fn:belang] https://bigenc.ru/linguistics/text/4924604
-[fn:elogue-sum] https://www.ethnologue.com/statistics
-[fn:elogue-eng] https://www.ethnologue.com/language/eng
+[fn:1] В 2019 г. в мире насчитывается по [[https://bigenc.ru/linguistics/text/4924604][одной]] оценке от 2,5 до 5 тыс, по
+[[https://www.ethnologue.com/statistics][другой]] \mdash более 7 тыс. языков. Тот же [[https://www.ethnologue.com/language/eng][источник]] утверждает, что английский язык
+является самым распространенным в мире.
