--- a/notes.org
+++ b/notes.org
@@ -2,6 +2,7 @@
 Добро пожаловать на страницу со сборником ресурсов по теме 
 "Английский язык и информационно-коммуникационные технологии (ИКТ)"
 Цель этой страницы \mdash объединить наиболее важные и доступные сайты.
+Далее несколько слов о том, почему эта тема может быть интересна.
 
 Английский язык играет важную роль в современном мире. [fn:1] Чаще всего он
 используется в качестве языка международного общения. Он 
@@ -16,8 +17,11 @@
 
 # ITU отчет по-русски https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR2018-ES-PDF-R.pdf
 При этом сами ИКТ являются не менее существенной частью нашей жизни. По [[https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf][данным]] 
-на 2018 г. число абонентов мобильной связи приблизилось в мире приблизилось
+на 2018 г. число абонентов мобильной связи в мире приблизилось
 к населению земного шара. 
+
+Вышеприведенные факты, позволяют сделать вывод о том, что данная тема может быть
+не только интересна, но и полезна для широкого круга людей.
 
 # https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf
 # Он является языком 
