Some comments to the links added.

--- a/base.org
+++ b/base.org
@@ -27,14 +27,20 @@
 # международного общения. А следователь
 
 * Ссылки
-
 ** Словари
-- https://www.oxfordlearnersdictionaries.com/
-- https://www.lexico.com/en. Старая [[https://en.oxforddictionaries.com/][ссылка]].
-- [[https://www.merriam-webster.com/]]
-- [[https://www.lingvolive.com/ru-ru]]
-
+Здесь небольшая подборка словарей. Здесь перечислены толковые и двуязычные, 
+британские и американские словари
+- https://www.lexico.com/en. Старая [[https://en.oxforddictionaries.com/][ссылка]]. :: Оксфордский (британский) толковый 
+словарь общего назначения.
+- https://www.oxfordlearnersdictionaries.com/ :: Оксфордский (британский) 
+толковый словарь. Предназначен для людей изучающих английский язык 
+- [[https://www.merriam-webster.com/]] :: Американский толковый словарь.
+- [[https://www.lingvolive.com/ru-ru]] :: Веб-словарь (двуязычный), включает в себя 
+перевод слов с английского на русский.
 ** Переводчики
+Здесь приведены примеры приложений-переводчиков. Позволяют переводить не 
+отдельные слова, а предложения и тексты. Попробуйте и тот, и другой (между ними
+есть разница), и выбирите, какой вам больше нравится.
 - https://translate.yandex.com/
 - https://translate.google.com/
 ** Магазины
@@ -49,9 +55,14 @@ https://ru.aliexpress.com/
 - https://www.ebay.com/
 - https://www.asos.com/ru/men/
 ** Энциклопедии
+Энциклопедии часто помогают нам в учебе. Википедия знакома всем. Также указаны
+ссылки на другие, традиционные энциклопедии, которые вы тоже можете 
+использовать.
 - https://www.wikipedia.org/
-- https://bigenc.ru/
-- https://www.britannica.com/
+- https://bigenc.ru/ :: Большая российская энциклопедия (БРЭ). Наследница
+Большой советской. Самая авторитетная энциклопедия страны.
+- https://www.britannica.com/ :: Энциклопедия Британника. Самая известная 
+англоязычная энциклопедия.
 ** Hour of Code
 # Course catalogue https://studio.code.org/courses
 *** Курс 2
