--- a/base.org
+++ b/base.org
@@ -63,12 +63,39 @@ https://ru.aliexpress.com/
 Большой советской. Самая авторитетная энциклопедия страны.
 - https://www.britannica.com/ :: Энциклопедия Британника. Самая известная 
 англоязычная энциклопедия.
-** Hour of Code
-# Course catalogue https://studio.code.org/courses
+** Code.org
+# Course catalogue https://studio.code.org/courses 
+# есть разница между страничками на русском и английском
+Code.org \mdash некоммерческая организация, занимающаяся расширением доступа к 
+информатике в школе[fn:2]. На их сайте доступно большое количество курсов,
+связанных с ИКТ на  многих языках мира. 
+
+В контексте наших занятий рекомендуется
+проходить курсы на английском языке. Это способствует развитию, с одной стороны,
+алгоритмического мышления, необходимого для понимания сущности ИКТ, а с другой,
+навыков владения английским языком, необходимых для ориентирования в глобальном
+мире. При выполнении заданий курса предусмотрено использование словарей и 
+переводчиков.
+
+
+# Это с одной стороны развивает
+# навыки владения английским языком, а с другой стороны способствует развитию
+# алгоритмического мышления, необходимого для понимания сути ИКТ.
+
 *** Курс 2
 https://studio.code.org/s/course2
 *** Курс 3
 https://studio.code.org/s/course3
+*** Курс 4
+https://studio.code.org/s/course4
+*** Курс B
+https://studio.code.org/s/courseb-2019
+*** Курс C
+https://studio.code.org/s/coursec-2019
+*** Курс D
+https://studio.code.org/s/coursed-2019
+*** Курс E
+https://studio.code.org/s/coursee-2019
 *** Курс F
 https://studio.code.org/s/coursef-2019
 *** Grid Garden
@@ -78,3 +105,4 @@ http://cssgridgarden.com/
 [fn:1] В 2019 г. в мире насчитывается по [[https://bigenc.ru/linguistics/text/4924604][одной]] оценке от 2,5 до 5 тыс, по
 [[https://www.ethnologue.com/statistics][другой]] \mdash более 7 тыс. языков. Тот же [[https://www.ethnologue.com/language/eng][источник]] утверждает, что английский язык
 является самым распространенным в мире.
+[fn:2] https://code.org/about
