--- a/base.org
+++ b/base.org
@@ -1,45 +1,26 @@
-Добро пожаловать на страницу со сборником ресурсов по теме 
- "Английский язык и информационно-коммуникационные технологии (ИКТ)"
- Цель этой страницы \mdash объединить наиболее важные и доступные сайты.
- Далее несколько слов о том, почему эта тема может быть интересна.
+Добро пожаловать на страницу со сборником ресурсов по теме   "Английский язык и информационно-коммуникационные технологии (ИКТ)"  Цель этой страницы \mdash объединить наиболее важные и доступные сайты.  Далее несколько слов о том, почему эта тема может быть интересна.
 
-Английский язык играет важную роль в современном мире. [fn:1] Чаще всего он
- используется в качестве языка международного общения. Он 
- позволяет людям из разных концов мира понимать друг друга. Таким образом
- английский язык может способствовать решению задачи всеобщего взаимопонимания
- людей в глобальном мире.
+Английский язык играет важную роль в современном мире. [fn:1] Чаще всего он  используется в качестве языка международного общения. Он   позволяет людям из разных концов мира понимать друг друга. Таким образом  английский язык может способствовать решению задачи всеобщего взаимопонимания  людей в глобальном мире.
 
-Весомый вклад в повышении статуса английского языка сделало распространение 
- информационных технологий. Этот язык стал де-факто стандартом создания и
- описания явлений цифрового мира. Основой большинства наиболее
- популярных языков программирования является именно английский язык.
+Весомый вклад в повышении статуса английского языка сделало распространение   информационных технологий. Этот язык стал де-факто стандартом создания и  описания явлений цифрового мира. Основой большинства наиболее  популярных языков программирования является именно английский язык.
 
 # ITU отчет по-русски https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR2018-ES-PDF-R.pdf
-При этом сами ИКТ являются не менее существенной частью нашей жизни. По [[https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf][данным]] 
- на 2018 г. число абонентов мобильной связи в мире приблизилось
- к населению земного шара. 
+При этом сами ИКТ являются не менее существенной частью нашей жизни. По [[https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf][данным]]   на 2018 г. число абонентов мобильной связи в мире приблизилось  к населению земного шара. 
 
-Вышеприведенные факты, позволяют сделать вывод о том, что данная тема может быть
- не только интересна, но и полезна для широкого круга людей.
+Вышеприведенные факты, позволяют сделать вывод о том, что данная тема может быть  не только интересна, но и полезна для широкого круга людей.
 
 # https://www.itu.int/en/ITU-D/Statistics/Documents/publications/misr2018/MISR-2018-Vol-1-E.pdf
 # Он является языком 
 # международного общения. А следователь
 
 * Словари
-Здесь небольшая подборка словарей. Здесь перечислены толковые и двуязычные, 
-британские и американские словари
-- https://www.lexico.com/en. Старая [[https://en.oxforddictionaries.com/][ссылка]]. :: Оксфордский (британский) толковый 
-словарь общего назначения.
-- https://www.oxfordlearnersdictionaries.com/ :: Оксфордский (британский) 
-толковый словарь. Предназначен для людей изучающих английский язык 
-- [[https://www.merriam-webster.com/]] :: Американский толковый словарь.
-- [[https://www.lingvolive.com/ru-ru]] :: Веб-словарь (двуязычный), включает в себя 
-перевод слов с английского на русский.
+Здесь небольшая подборка словарей. Здесь перечислены толковые и двуязычные,  британские и американские словари
+- https://www.lexico.com/en. Старая [[https://en.oxforddictionaries.com/][ссылка]]. :: Оксфордский (британский) толковый  словарь общего назначения.
+- https://www.oxfordlearnersdictionaries.com/ :: Оксфордский (британский)  толковый словарь. Предназначен для людей изучающих английский язык 
+- [[https://www.merriam-webster.com/]] :: Американский толковый словарь. 
+- [[https://www.lingvolive.com/ru-ru]] :: Веб-словарь (двуязычный), включает в себя  перевод слов с английского на русский.
 * Переводчики
-Здесь приведены примеры приложений-переводчиков. Позволяют переводить не 
-отдельные слова, а предложения и тексты. Попробуйте и тот, и другой (между ними
-есть разница), и выбирите, какой вам больше нравится.
+Здесь приведены примеры приложений-переводчиков. Позволяют переводить не  отдельные слова, а предложения и тексты. Попробуйте и тот, и другой (между ними есть разница), и выбирите, какой вам больше нравится.
 - https://translate.yandex.com/
 - https://translate.google.com/
 * Магазины
@@ -54,27 +35,16 @@ https://ru.aliexpress.com/
 - https://www.ebay.com/
 - https://www.asos.com/ru/men/
 * Энциклопедии
-Энциклопедии часто помогают нам в учебе. Википедия знакома всем. Также указаны
-ссылки на другие, традиционные энциклопедии, которые вы тоже можете 
-использовать.
+Энциклопедии часто помогают нам в учебе. Википедия знакома всем. Также указаны ссылки на другие, традиционные энциклопедии, которые вы тоже можете  использовать.
 - https://www.wikipedia.org/
-- https://bigenc.ru/ :: Большая российская энциклопедия (БРЭ). Наследница
-Большой советской. Самая авторитетная энциклопедия страны.
-- https://www.britannica.com/ :: Энциклопедия Британника. Самая известная 
-англоязычная энциклопедия.
+- https://bigenc.ru/ :: Большая российская энциклопедия (БРЭ). Наследница Большой советской. Самая авторитетная энциклопедия страны.
+- https://www.britannica.com/ :: Энциклопедия Британника. Самая известная  англоязычная энциклопедия.
 * Code.org
 # Course catalogue https://studio.code.org/courses 
 # есть разница между страничками на русском и английском
-Code.org \mdash некоммерческая организация, занимающаяся расширением доступа к 
-информатике в школе[fn:2]. На их сайте доступно большое количество курсов,
-связанных с ИКТ на  многих языках мира. 
+Code.org \mdash некоммерческая организация, занимающаяся расширением доступа к  информатике в школе[fn:2]. На их сайте доступно большое количество курсов, связанных с ИКТ на  многих языках мира. 
 
-В контексте наших занятий рекомендуется
-проходить курсы на английском языке. Они способствуют развитию, с одной стороны,
-алгоритмического мышления, необходимого для понимания сущности ИКТ, а с другой,
-навыков владения английским языком, необходимых для ориентирования в глобальном
-мире. При выполнении заданий курса предусмотрено использование словарей и 
-переводчиков.
+В контексте наших занятий рекомендуется проходить курсы на английском языке. Они способствуют развитию, с одной стороны, алгоритмического мышления, необходимого для понимания сущности ИКТ, а с другой, навыков владения английским языком, необходимых для ориентирования в глобальном мире. При выполнении заданий курса предусмотрено использование словарей и  переводчиков.
 
 
 # Это с одной стороны развивает
