--- a/notes.org
+++ b/notes.org
@@ -1,7 +1,7 @@
 # #+HUGO_BASE_DIR: c:/Hugo/Sites/EIT
 #+EXPORT_FILE_NAME: README.md
 
-* Английский язык и информационно-коммуникационные технологии
+* ИКТ и английский язык
 #+INCLUDE: "base.org"
 
 # Урок с просмотром мультика на английском языке.
