Encyclopedia's links fix

--- a/base.org
+++ b/base.org
@@ -36,9 +36,9 @@ https://ru.aliexpress.com/
 - https://www.asos.com/ru/men/
 * Энциклопедии
 Энциклопедии часто помогают нам в учебе. Википедия знакома всем. Также указаны ссылки на другие, традиционные энциклопедии, которые вы тоже можете  использовать.
-- https://www.wikipedia.org/
+- https://www.wikipedia.org/ :: Википедия.
 - https://bigenc.ru/ :: Большая российская энциклопедия (БРЭ). Наследница Большой советской. Самая авторитетная энциклопедия страны.
-- https://www.britannica.com/ :: Энциклопедия Британника. Самая известная  англоязычная энциклопедия.
+- https://www.britannica.com/ :: Энциклопедия Британника. Самая известная англоязычная энциклопедия.
 * Code.org
 # Course catalogue https://studio.code.org/courses 
 # есть разница между страничками на русском и английском
